--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  background: linear-gradient(90deg, #e66465 80%, #9198e5 80%);
+  background-clip: text;
+  color: transparent
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.conteinter2{
+  background-color: blue;
+  height: 100px;
+  width: 100px;
+  mask-image: url(./img/star-icon.svg);
+
 }
+
+p {
+  font-size: 30px;
+}
+
+.container3{
+  background-color: greenyellow;
+  width: 150px;
+
+}
+
+.container4{
+  width: 150px;
+  display: flex;
+  gap: 5px;
+
+}
+
+.container5{
+  width: 150px;
+  display: flex;
+  gap: 5px;
+}
+
+
